src/app/(frontend)/styles.css
@import "tailwindcss";
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');

@font-face {
  font-family: 'Satoshi Variable';
  src: url('/fonts/Satoshi-Variable.woff2') format('woff2'),
       url('/fonts/Satoshi-Variable.woff') format('woff');
  font-weight: 300 900;
  font-display: swap;
  font-style: normal;
}

@font-face {
  font-family: 'Satoshi Variable';
  src: url('/fonts/Satoshi-VariableItalic.woff2') format('woff2'),
       url('/fonts/Satoshi-VariableItalic.woff') format('woff');
  font-weight: 300 900;
  font-display: swap;
  font-style: italic;
}

@custom-variant dark (&:is(.dark *));

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: Satoshi Variable, sans-serif;
  --font-mono: var(--font-geist-mono);
  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);
  --color-chart-5: var(--chart-5);
  --color-chart-4: var(--chart-4);
  --color-chart-3: var(--chart-3);
  --color-chart-2: var(--chart-2);
  --color-chart-1: var(--chart-1);
  --color-ring: var(--ring);
  --color-input: var(--input);
  --color-border: var(--border);
  --color-destructive: var(--destructive);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary: var(--secondary);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary: var(--primary);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover: var(--popover);
  --color-card-foreground: var(--card-foreground);
  --color-card: var(--card);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --font-serif: Abhaya Libre, serif;
  --color-destructive-foreground: var(--destructive-foreground);
  --color-shadow-color: var(--shadow-color);
  --color-sidebar-background: var(--sidebar-background);
}

:root {
  --primary: oklch(0.540 0.220 28.865);
  --accent: oklch(0.954 0.011 17.346);
  --background: oklch(0.985 0.000 0.000);
  --border: oklch(0.920 0.004 286.320);
  --card: oklch(0.982 0.000 0.000);
  --card-foreground: oklch(0.274 0.005 286.033);
  --destructive: oklch(0.637 0.208 25.331);
  --destructive-foreground: oklch(1.000 0.000 0.000);
  --accent-foreground: oklch(0.540 0.220 28.865);
  --foreground: oklch(0.370 0.012 285.805);
  --input: oklch(0.952 0.000 0.000);
  --muted: oklch(0.967 0.001 286.375);
  --popover: oklch(0.985 0.000 0.000);
  --popover-foreground: oklch(0.370 0.012 285.805);
  --primary-foreground: oklch(0.987 0.021 95.277);
  --ring: oklch(0.920 0.004 286.320);
  --secondary: oklch(0.940 0.000 0.000);
  --secondary-foreground: oklch(0.348 0.000 0.000);
  --muted-foreground: oklch(0.706 0.014 286.025);
  --chart-1: oklch(0.769 0.165 70.080);
  --chart-2: oklch(0.666 0.157 58.318);
  --chart-3: oklch(0.555 0.146 48.998);
  --chart-4: oklch(0.473 0.125 46.201);
  --chart-5: oklch(0.414 0.105 45.904);
  --sidebar-foreground: oklch(0.269 0.000 0.000);
  --sidebar: oklch(1.000 0.000 0.000);
  --sidebar-primary: oklch(0.540 0.220 28.865);
  --sidebar-accent: oklch(0.987 0.021 95.277);
  --sidebar-accent-foreground: oklch(0.540 0.220 28.865);
  --sidebar-border: oklch(0.928 0.006 264.531);
  --sidebar-ring: oklch(0.540 0.220 28.865);
  --shadow-color: oklch(1.000 0.000 0.000);
  --sidebar-background: oklch(1.000 0.000 0.000);
  --font-sans: 'Lato', sans-serif;
  --font-serif: 'Plus Jakarta Sans', sans-serif;
  --sidebar-primary-foreground: hsl(0 0% 98%);
}

.dark {
  --primary: oklch(0.560 0.190 25.241);
  --accent-foreground: oklch(0.761 0.034 15.567);
  --background: oklch(0.191 0.000 0.000);
  --border: oklch(0.371 0.000 0.000);
  --card: oklch(0.269 0.000 0.000);
  --accent: oklch(0.200 0.000 0.000);
  --card-foreground: oklch(0.922 0.000 0.000);
  --destructive: oklch(0.637 0.208 25.331);
  --destructive-foreground: oklch(1.000 0.000 0.000);
  --foreground: oklch(0.922 0.000 0.000);
  --input: oklch(0.371 0.000 0.000);
  --muted: oklch(0.205 0.000 0.000);
  --popover-foreground: oklch(0.922 0.000 0.000);
  --primary-foreground: oklch(0.987 0.021 95.277);
  --ring: oklch(0.540 0.220 28.865);
  --secondary-foreground: oklch(0.922 0.000 0.000);
  --chart-1: oklch(0.837 0.164 84.429);
  --chart-2: oklch(0.666 0.157 58.318);
  --chart-3: oklch(0.473 0.125 46.201);
  --chart-4: oklch(0.555 0.146 48.998);
  --chart-5: oklch(0.473 0.125 46.201);
  --sidebar: oklch(1.000 0.000 0.000);
  --sidebar-foreground: oklch(0.922 0.000 0.000);
  --sidebar-primary: oklch(0.540 0.220 28.865);
  --sidebar-primary-foreground: oklch(1.000 0.000 0.000);
  --sidebar-accent: oklch(0.473 0.125 46.201);
  --sidebar-accent-foreground: oklch(0.540 0.220 28.865);
  --sidebar-border: oklch(0.371 0.000 0.000);
  --sidebar-ring: oklch(0.540 0.220 28.865);
  --shadow-color: oklch(1.000 0.000 0.000);
  --sidebar-background: oklch(1.000 0.000 0.000);
  --secondary: oklch(0.348 0.000 0.000);
}

@layer base {
  .heading-xl {
    font-family: Satoshi Variable;
  }

  .heading-lg {
    font-family: Satoshi Variable;
  }

  .heading-md {
    font-family: Satoshi Variable;
  }

  .heading-sm {
    font-family: Satoshi Variable;
  }

}

@media screen and (max-width: 80rem) {
  .heading-xl {
    font-family: Satoshi Variable;
  }

  .heading-lg {
    font-family: Satoshi Variable;
  }

  .heading-md {
    font-family: Satoshi Variable;
  }

  .heading-sm {
    font-family: Satoshi Variable;
  }

}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  html,
  body {
    @apply h-full m-0 p-0;
  }
  body {
    @apply bg-background text-foreground;
  }

  body.no-navbar header {
    @apply hidden;
  }

  body.no-navbar main {
    @apply p-0 w-full max-w-none mx-0;
  }
}

